# quadrotor_sceneflow_cbf

./: .gitignore  README.md
code_quadrotor/: .gitignore  .gitmodules  CMakeLists.txt  README.md  build20.sh  cam_main.cpp  clean.sh  device_query.cpp  my_libuvc_installation.sh  rebuild.sh  ros1_viz_3d.py  sceneflow_video_render.py  start_bag.sh  start_rsync.sh  test.py  visualize_scene_flow.py  visualize_scene_flow_open3d.py
code_quadrotor/config/: cbf_params.yaml  cbf_params2.yml  cbf_params3.yml
code_quadrotor/include/pd_flow/: pdflow_cudalib.h
code_quadrotor/ros1_ws/: .gitignore
code_quadrotor/ros1_ws/src/: CMakeLists.txt
code_quadrotor/ros1_ws/src/my_ros_package/: CMakeLists.txt  package.xml
code_quadrotor/ros1_ws/src/my_ros_package/include/my_ros_package/: ros_nodes.hpp
code_quadrotor/ros1_ws/src/my_ros_package/src/: ros_nodes.cpp
code_quadrotor/ros1_ws/src/pi_controller_node/: CMakeLists.txt  package.xml
code_quadrotor/ros1_ws/src/pi_controller_node/include/pi_controller_node/: pi_controller_node.h
code_quadrotor/ros1_ws/src/pi_controller_node/src/: pi_controller_node.cpp
code_quadrotor/ros1_ws/src/scene_flow_msgs/: CMakeLists.txt  package.xml
code_quadrotor/ros_ws/: .gitignore  environment2.yml
code_quadrotor/ros_ws/src/my_ros_package/: CMakeLists.txt  package.xml
code_quadrotor/ros_ws/src/my_ros_package/include/my_ros_package/: ros_nodes.hpp
code_quadrotor/ros_ws/src/my_ros_package/launch/: rtab_sync_launch.py
code_quadrotor/ros_ws/src/my_ros_package/src/: ros_nodes.cpp
code_quadrotor/ros_ws/src/scene_flow_msgs/: CMakeLists.txt  package.xml
code_quadrotor/ros_ws/src/scene_flow_msgs/msg/: SceneFlow.msg
code_quadrotor/src/: pdflow_cudalib.cu
code_quadrotor/src/apps/: cbf_calc.cu  cbf_calc.h  cbf_solver.cpp  cbf_solver.h  magnitude_filter.h  main_scene_flow_visualization.cpp  my_app.cpp  my_extras.cpp  my_extras.h  my_extras2.cpp  my_extras2.h  rotation_util.hpp  rs_reader_threaded.cpp  rs_reader_threaded.h  scene_flow_impair.cpp  scene_flow_impair.h  scene_flow_visualization.cpp  scene_flow_visualization.h  scene_transform.cpp  scene_transform.h  vector_median.cpp  vector_median.h
code_quadrotor/src/cud/: cuda_logsumexp.cu  cuda_logsumexp.h
