<?xml version="1.0"?>
<package format="2">
  <name>my_ros_package</name>
  <version>0.0.0</version>
  <description>
    A helper library for wrapping ROS functionalities.
  </description>
  <maintainer email="mortensvendgaard@gmail.com">morten</maintainer>
  <license>BSD</license>
  
  <!-- Build tool dependency for a ROS1 catkin package -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ROS dependencies -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>scene_flow_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>mavros_msgs</depend>
  
  <export>
    <build_type>catkin</build_type>
  </export>
</package>