<?xml version="1.0"?>
<package format="2">
  <name>scene_flow_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for scene flow.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <!-- Use catkin as the build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Message generation dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package> 